# remember

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  importer.rs  lib.rs  main.rs  models.rs  srs.rs  util.rs
src/lib/: api.ts  app.svelte.ts  format.ts  render.ts
src/lib/components/: ActionButton.svelte  CardEditor.svelte  Icon.svelte  Logo.svelte  Modal.svelte  Sidebar.svelte
src/lib/styles/: app.css
src/routes/: +layout.svelte  +page.svelte
src/routes/browse/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/study/: +page.svelte
