[package]
name = "remember"
version = "0.1.0"
description = "A local-first, spaced-repetition flashcard app (an open-source Anki) with optional end-to-end Turso sync."
authors = ["Linus Talacko"]
license = "MIT"
repository = "https://github.com/linustalacko/remember"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "remember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = "0.9.30"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }

